adicionando entidades de forma de pagamento