@@ -33,7 +33,7 @@ public class SqliteOrderMapper {
         if (domain.getItemsBO() != null && !domain.getItemsBO().isEmpty()) {
             entity.setItems(domain.getItemsBO().stream()
                     .map(SqliteOrderItemMapper::toEntity)
-                    .collect(Collectors.toList()));
+                    .toList());
         }
 
         return entity;
@@ -50,8 +50,8 @@ public class SqliteOrderMapper {
                 SqliteClientMapper.toDomain(entity.getClient()),
                 entity.getStatus(),
                 entity.getTotalValue(),
-                entity.getItems() != null ? entity.getItems().stream()
-                .map(item -> SqliteOrderItemMapper.toDomain(item, false))
-                .collect(Collectors.toList()) : null);
+                entity.getItems() != null ? entity.getItems().stream().map(item -> SqliteOrderItemMapper.toDomain(item, false)).toList() : null,
+                entity.getFormasPagamento() != null ? entity.getFormasPagamento().stream().map(SqliteFormaPagamentoMapper::toDomain).toList() : null
+                );
     }
 }
